# pycounts_arvizzoni

./: CHANGELOG.md  CONTRIBUTING.md  README.md  Test 1.ipynb  pyproject.toml
Package/: pyproject.toml
Package/docs/: conf.py  example.ipynb  make.bat
pacote_pycounts/: pyvenv.cfg
pacote_pycounts/Scripts/: activate  activate.bat
pycounts_arvizzoni/: CHANGELOG.md  README.md  pyproject.toml
pycounts_arvizzoni/docs/: Makefile
pycounts_arvizzoni/tests/: test_pycounts_arvizzoni.py
src/pycounts_arvizzoni/: __init__.py
src/pycounts_arvizzoni.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
