[project]
name = "pycounts_arvizzoni"
version = "0.1.0"
description = "A package for counting the number of words in a text file. Template from python packages"
authors = [
    { name = "André Vizzoni", email = "arvizzoni@hotmail.com" } # Optional
]
maintainers = [
    { name = "André Vizzoni", email = "arvizzoni@hotmail.com" } # Optional
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
