[tool.poetry]
name = "pycounts_arvizzoni"
version = "0.1.0"
description = "A package for counting the number of words in a text file. Used the template from Python Packages."
authors = ["André Vizzoni"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
